# ragenix

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  default.nix  flake.nix  rust-toolchain
.github/workflows/: macos-aarch64.yml  main.yaml  update-cargo.yaml  update-deps.yaml  update-flakes.yaml
docs/: ragenix.1  ragenix.1.html  ragenix.1.ronn
example/: generated.secret.age  github-runner.token.age  root.passwd.age  secrets-configuration.nix  secrets-plugin.nix  secrets.nix
example/keys/: README.md  example_plugin_key.txt  id_ed25519  id_rsa  key-passphrase.txt  key.txt
src/: age.rs  agenix.rs  cli.rs  lib.rs  main.rs  util.rs
src/ragenix/: agenix.schema.json  mod.rs
tests/: cli.rs  ragenix.rs
