[package]
name = "ragenix"
description = "A rust drop-in replacement for agenix"
version = "0.1.0"
authors = ["Vincent Haupert <vincent@yaxi.tech>"]
edition = "2018"

[dependencies]
age = { version = "0.6.0", default-features = false, features = [ "cli-common", "ssh", "armor" ] }
clap = "3.0.0-beta.2"
color-eyre = { version = "0.5.11", default-features = false, features = [ "track-caller" ] }
home = "0.5.3"
jsonschema = "0.8.3"
serde = "1.0.125"
serde_json = "1.0"
sha2 = "0.9.3"
shlex = "1.0.0"
tempfile = "3"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
copy_dir = "0.1"
indoc = "1.0"
hex-literal = "0.3.1"

[build-dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
