[package]
name = "ragenix"
description = "A rust drop-in replacement for agenix"
version = "0.1.0"
authors = ["Vincent Haupert <vincent@yaxi.tech>"]
edition = "2021"

[dependencies]
age = { version = "^0.6", default-features = false, features = [ "cli-common", "ssh", "armor" ] }
clap = "^3.0.0-beta.4"
color-eyre = { version = "^0.5", default-features = false, features = [ "track-caller" ] }
home = "^0.5"
jsonschema = "^0.12"
serde = "^1.0"
serde_json = "^1.0"
sha2 = "^0.9"
shlex = "^1.1"
tempfile = "^3.2"
lazy_static = "^1.4"

[dev-dependencies]
assert_cmd = "^2.0"
predicates = "^2.0"
copy_dir = "^0.1"
indoc = "^1.0"
hex-literal = "^0.3"

[build-dependencies]
clap = "^3.0.0-beta.4"
clap_generate = "^3.0.0-beta.4"
