[package]
name = "ragenix"
description = "A rust drop-in replacement for agenix"
version = "0.1.0"
authors = ["Vincent Haupert <vincent@yaxi.tech>"]
edition = "2021"

[features]
default = [ "recursive-nix" ]
# Run tests which require a system with `recursive-nix` conditionally
recursive-nix = []

[dependencies]
age = { version = "^0.9", default-features = false, features = [ "cli-common", "ssh", "armor", "plugin" ] }
clap = { version = "^4.0", features = [ "cargo", "env" ] }
color-eyre = { version = "^0.6", default-features = false, features = [ "track-caller" ] }
home = "^0.5"
jsonschema = { version = "^0.17", default-features = false }
serde = "^1.0"
serde_json = "^1.0"
sha2 = "^0.10"
shlex = "^1.1"
tempfile = "^3.2"
lazy_static = "^1.4"

[dev-dependencies]
assert_cmd = "^2.0"
predicates = "^3.0"
copy_dir = "^0.1"
indoc = "^2.0"
hex-literal = "^0.4"

[build-dependencies]
clap = { version = "^4.0", features = [ "cargo", "env" ] }
clap_complete = "^4.0"
